syntax = "proto3";

option go_package = "github.com/nomoresecretz/ghoeq-common/proto/eqstruct";

package eqstruct;

message ChannelMessage {
    bytes target_name = 1;
    bytes sender = 2;
    uint32 language = 3;
    uint32 channel_number = 4;
    uint32 language_skill = 5;
    bytes message = 6;
}