syntax = "proto3";

option go_package = "github.com/nomoresecretz/ghoeq-common/proto/eqstruct";
import "proto/any/any.proto";

package eqstruct;

message DataStruct {
    reserved 1; // deprecated type
    google.protobuf.Any msg = 2;
}

message PlayRequest {
    string IP = 1;
}

message ClientUpdate {
    string client_id = 1;
}