syntax = "proto3";

option go_package = "github.com/nomoresecretz/ghoeq-common/proto/eqstruct";

package eqstruct;

message LoginInfo {
    bytes login_info = 1;
    string account = 2;
    string password = 3;
    uint32 zoning = 4;
}

message LogServer {
    string short_name = 1;
    string address = 2;
    uint32 port = 3;
}

message LoginAccepted {
    string account = 1;
}