syntax = "proto3";

option go_package = "github.com/nomoresecretz/ghoeq-common/proto/eqstruct";

package eqstruct;

message Spawn {
    uint32 spawn_id = 1;
    int32 acceleration = 2;
    uint32 heading = 3;
    int32 heading_delta = 4;
    int32 y = 5;
    int32 x = 6;
    int32 z = 7;
    uint32 y_delta = 8;
    uint32 x_delta = 9;
    uint32 z_delta = 10;
    uint32 pet_owner = 11;
    uint32 animation = 12;
    uint32 hair_color = 13;
    uint32 beard_color = 14;
    uint32 eye_color_1 = 15;
    uint32 eye_color_2 = 16;
    uint32 hair_style = 17;
    uint32 beard = 18;
    uint32 title = 19;
    float size = 20;
    float walk_speed = 21;
    float run_speed = 22;
    int32 body_type = 23;
    int32 hp_curr = 24;
    int32 guild_id = 25;
    int32 race = 26;
    uint32 npc = 27;
    uint32 class_b = 28;
    uint32 gender = 29;
    uint32 level = 30;
    uint32 invis = 31;
    uint32 sneaking = 32;
    uint32 pvp = 33;
    uint32 anim_type = 34;
    uint32 light = 35;
    int32 anon = 36;
    int32 afk = 37;
    int32 summoned_pc = 38;
    int32 ld = 39;
    int32 gm = 40;
    int32 fly_mode = 41;
    int32 body_texture = 42;
    int32 helm = 43;
    uint32 face = 44;
    int32 guild_rank = 45;
    int32 diety = 46;
    int32 temp_pet = 47;
    string name = 48;
    string surname = 49;
}

message Spawns {
    repeated Spawn spawns = 1;
}

message SpawnPosition {
    uint32 spawn_id = 1;
    int32 anim_type = 2;
    uint32 heading = 3;
    int32 heading_delta = 4;
    int32 x = 5;
    int32 y = 6;
    int32 z = 7;
    uint32 delta = 8;
}

message SpawnPositions {
    repeated SpawnPosition positions = 1;
}

message SpawnAppearance {
    uint32 spawn_id = 1;
    uint32 type = 2;
    uint32 parameter = 3;
}

message Object {
    uint32 prev = 1;
    uint32 next = 2;
    uint32 unknown_008 = 3;
    uint32 drop_id = 4;
    uint32 zone_id = 5;
    uint32 zone_instance = 6;
    float heading = 7;
    float z = 8;
    float x = 9;
    float y = 10;
    string name = 11;
    uint32 object_type = 12;
    uint32 spawn_id = 13;
}

message DeleteSpawn {
    uint32 spawn_id = 1;
}

message SpawnDoor {
    string name = 1;
    float y = 2;
    float x = 3;
    float z = 4;
    float heading = 5;
    uint32 incline = 6;
    uint32 size = 7;
    uint32 door_id = 8;
    uint32 open_type = 9;
    uint32 open_flag = 10;
    uint32 inverted = 11;
    uint32 parameter = 12;
}

message SpawnDoors {
    repeated SpawnDoor doors = 1;
}